--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,94 +1,29 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
-  <div class="container">
-    <a class="navbar-brand" href="{% url 'index' %}">
-      Villa Realtors
-      <i class="fas fa-home"></i>
-      <!-- <img src="{% static 'img/logo.png' %} " class="logo" alt="" /> -->
-    </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <ul class="navbar-nav">
-        <li 
-          {% if '/' == request.path %}
-          class="nav-item active mr-3"
-          {% else %}
-          class="nav-item mr-3"
-          {% endif %}
-        >
-          <a class="nav-link" href="{% url 'index' %}">Home</a>
-        </li>
-        <li 
-        {% if 'about' in request.path %}
-        class="nav-item active mr-3"
-        {% else %}
-        class="nav-item mr-3"
-        {% endif %}
-        >
-          <a class="nav-link" href="{% url 'about' %}">About</a>
-        </li>
-        <li 
-        {% if 'listings' in request.path %}
-        class="nav-item active mr-3"
-        {% else %}
-        class="nav-item mr-3"
-        {% endif %}
-        
-        >
-          <a class="nav-link" href="{% url 'listings' %}">Listings</a>
-        </li>
-      </ul>
+<header>
+  <a href="{% url 'index' %}" class="site-logo" aria-label="homepage">
+      <i class="fas fa-home"></i> Villa Realtors</a>
+  <navbar class="main-nav">
+    <ul class="nav__list">
+      <li class="nav__list-item"><a href="{% url 'index' %}" class="nav__link">Home</a></li>
+      <li class="nav__list-item">
+        <a href="{% url 'about' %}" class="nav__link">About</a>
+      </li>
+      <li class="nav__list-item">
+        <a href="{% url 'listings' %}" class="nav__link">Our Properties</a>
+      </li>
+    </ul>
+  </navbar>
 
-      <ul class="navbar-nav ml-auto">
-        {% if user.is_authenticated %}
-              <li 
-              {% if 'dashboard' in request.path %}
-              class="nav-item active mr-3"
-              {% else %}
-              class="nav-item mr-3"
-              {% endif %}
-              >
-                <a class="nav-link" href="{% url 'dashboard' %}">
-                  Dashboard</a
-                >
-              </li>
-              <li class="nav-item mr-3">
-                <a href="javascript:{document.getElementById('logout').submit()}"
-                 class="nav-link">Logout</a>
-                 <form action="{% url 'logout' %}" method="POST" id="logout">
-                   {% csrf_token %}
-                   <input type="hidden" >
-                 </form>
-              </li>
-        {% else %}
-          <li 
-          {% if 'register' in request.path %}
-          class="nav-item active mr-3"
-          {% else %}
-          class="nav-item mr-3"
-          {% endif %}
-          >
-            <a class="nav-link" href="{% url 'register' %}">
-              </i> Register</a
-            >
-          </li>
-          <li 
-          {% if 'login' in request.path %}
-          class="nav-item active mr-3"
-          {% else %}
-          class="nav-item mr-3"
-          {% endif %}>  
-            <a class="nav-link" href="{% url 'login' %}">Login</a>
-          </li>
-        {% endif %}
-      </ul>
-    </div>
-  </div>
-</nav>
+
+  <navbar class="account">
+    <ul class="nav__list">
+      <li class="nav__list-item">
+        <a class="nav__link nav__link--btn" href="{% url 'login' %}">Login</a>
+      </li>
+      <li class="nav__list-item">
+        <a class="nav__link nav__link--btn nav__link--btn--highlight" href="{% url 'register' %}">Register</a>
+      </li>
+    </ul>
+  </navbar>
+</header>
+
