--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% load humanize %} {% block content %}
-<section id="showcase-inner" class="showcase-search text-white py-5">
+<section id="showcase-inner" class="showcase-search text-white mt-5 py-5">
   <div class="container">
     <div class="row text-center">
       <div class="col-md-12">
