--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -16,13 +16,28 @@
 
 
   <navbar class="account">
-    <ul class="nav__list">
-      <li class="nav__list-item">
-        <a class="nav__link nav__link--btn" href="{% url 'login' %}">Login</a>
-      </li>
-      <li class="nav__list-item">
-        <a class="nav__link nav__link--btn nav__link--btn--highlight" href="{% url 'register' %}">Register</a>
-      </li>
+      <ul class="nav__list">
+          {% if user.is_authenticated %}
+          <li class="nav__list-item">
+            <a class="nav__link" href="{% url 'dashboard' %}">
+              Dashboard</a>
+          </li>
+          <li class="nav-item mr-3">
+            <a href="javascript:{document.getElementById('logout').submit()}" class="nav__link">Logout</a>
+            <form action="{% url 'logout' %}" method="POST" id="logout">
+              {% csrf_token %}
+              <input type="hidden">
+            </form>
+          </li>
+          {% else %}
+          <li class="nav__list-item">
+              <a class="nav__link nav__link--btn" href="{% url 'login' %}">Login</a>
+            </li>
+            <li class="nav__list-item">
+              <a class="nav__link nav__link--btn nav__link--btn--highlight" href="{% url 'register' %}">Register</a>
+            </li>
+          {% endif %}
+        </ul>
     </ul>
   </navbar>
 </header>
