--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -92,7 +92,7 @@
     <h6 class="text-center text-white pt-5">
       Subscribe to Receive Updates on New Listings
     </h6>
-    <form class="subscribe_form">
+    <form class="subscribe_form mt-3">
          <div class="input-group">
           <input type="text" class="form-control" name="email" placeholder="Enter your email">
           <span class="input-group-btn">
