--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,50 +1,30 @@
 {% extends 'base.html' %}
 {% block title %} | Login {% endblock %}
- {% block content %}
-<section id="login" class="bg-light py-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 mx-auto">
-        <div class="card animated shake slow mt-5">
-          <div class="card-header bg-primary text-white">
-            <h4>Login</h4>
-          </div>
-          <div class="card-body">
-               <!-- alerts -->
-               {% include 'partials/_alerts.html' %}
-            <form action="{% url 'login' %}" method="POST">
-                {% csrf_token %}
-              <div class="form-group">
-                <label for="username">Username</label>
-                <input
-                  type="text"
-                  name="username"
-                  class="form-control"
-                  required
-                />
-              </div>
+{% block content %}
+<section id="form-area">
+  {% include 'partials/_alerts.html' %}
+  <form class="login-form" action="{% url 'login' %}" method="POST">
+    {% csrf_token %}
+    <h3>Login</h3>
 
-              <div class="form-group">
-                <label for="password2">Password</label>
-                <input
-                  type="password"
-                  name="password"
-                  class="form-control"
-                  required
-                />
-              </div>
-
-              <input
-                type="submit"
-                value="Login"
-                class="btn btn-primary btn-block"
-              />
-            </form>
-          </div>
-        </div>
-      </div>
+    <div class="txtb">
+      <input type="text" name="username" required>
+      <span data-placeholder="Username"></span>
     </div>
-  </div>
+
+    <div class="txtb">
+      <input type="password" name="password" required>
+      <span data-placeholder="Password"></span>
+    </div>
+
+    <input type="submit" class="logbtn" value="Login">
+
+    <div class="bottom-text">
+      Don't have an account? <a href="{% url 'register' %}">Register</a>
+    </div>
+  </form>
+
 </section>
+
 
 {% endblock %}
